CEM: зеркало X у смещений и ванильный риг villager
Два бага от Вемпи после шагов 1–6, оба доказаны пробами:

1. Зрачки «инвертированы» у всех моделей. BBS кладёт смещение кости по X
   зеркально (ICubicRenderer.translateGroup: -(translate.x - pivot.x)),
   а writeback CEM писал current.x = -tx как есть — любое Δtx от FA
   двигало кость в обратную сторону; Y, Z и повороты были верны. Теперь
   X пишется как отражение относительно опоры (2*pivot.x - X): в
   JemLook при head_yaw=30 левый зрачок идёт вправо, как голова.

2. villager: голова статична. FA крутит head.*, но у head нет боксов —
   геометрия головы в headwear и nose, которые в ванили дети head, а у
   нас были плоскими соседями. Плюс два слоя под этим: translate у head
   в файле [0,0,0], а FA пишет head.ty как у тела (точка вращения у
   шеи) — без опоры (0,24,0) дети взлетели бы на 23.66; и FA пишет
   nose.ty = 0, то есть позиционирует переподчинённую часть относительно
   опоры родителя — без этого нос упал бы на 24.

   CemHierarchy стал носителем данных (parents + pivots) с записью
   villager (headwear, headwear2, nose, bodywear и опора head), парсер
   применяет опоры и помечает переподчинённые части как parent-relative
   (SUBN независимо от глубины), cem_parents из config.json ложится
   сверху через withParents. Проба villager: head pivot (0,24,0), applied
   (0, 23.66, -0.04), nose остаётся на 24.

Вывод по трём пакам (в памяти): точка вращения part у OptiFine —
ванильная; translate = -pivot лишь потому, что так экспортирует
Blockbench. Общее решение — ванильный шаблон из живого клиента
(EntityModelLayers) — отдельный шаг.

Волк (глаза закрыты) НЕ трогался по слову Вемпи: FA-математика говорит
«открыты», подозрение на запекание VAO при скрытой группе.

Сборка зелёная, CemTest зелёный, корова — те же 9 костей.
В игре НЕ ПРОГНАНО.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>